--- a/src/css/site/var.less
+++ b/src/css/site/var.less
@@ -324,8 +324,10 @@
 @media-point-xxl: ~"(min-width: 1700px)";
 @media-point-screen: ~"(min-width: 1025px)";
 @media-point-screen-lg: ~"(min-width: 1200px)";
+@media-point-screen-xl: ~"(min-width: 1400px)";
 @media-point-device: ~"(max-width: 1024px)";
 @media-point-device-lg: ~"(max-width: 1199px)";
+@media-point-device-xl: ~"(max-width: 1399px)";
 @media-point-tablet: ~"(min-width: 768px) and (max-width: 1024px)";
 @media-point-smart: ~"(max-width: 767px)";
 @media-point-notsmart: ~"(min-width: 768px)";
