include fancybox and bootstrap

--- a/src/css/site.less
+++ b/src/css/site.less
@@ -11,6 +11,7 @@
 /*@import "./../../../../vendor/azbn.ru/bootstrap/bootstrap.less";*/
 
 @import "./bootstrap/bootstrap.less";
+@import "./fancybox/fancybox.less";
 
 /* Подключение стилей сайта */
 @import "@{site-name}/var.less";
