--- a/src/css/bootstrap/grid.less
+++ b/src/css/bootstrap/grid.less
@@ -11,7 +11,7 @@
 	.container-fixed();
 	width: 100%;
 	@media @media-point-screen{width: 95vw;}
-	@media @media-point-xxl{width: 85vw; max-width: 1570px;}
+	@media @media-point-xxl{width: 85vw; max-width: @b-width;}
 }
 // Fluid container
 //
