--- a/src/css/site/var.less
+++ b/src/css/site/var.less
@@ -67,6 +67,7 @@
 @din:							DINCondensedC-400;
 
 //===== base =====//
+@b-width:						1570px;
 @b-color:						@black-4f; 
 @b-color-a:						@blue-dark; 
 @b-color-a-hover:				@blue; 
