--- a/src/css/site/sprite.less
+++ b/src/css/site/sprite.less
@@ -25,33 +25,13 @@
 	font-size:(96.123/10)*1rem;
 	//width:(96.124/96.123)*1em;
 }
-.icon-icon-adv1 {
-	font-size:(80/10)*1rem;
-	//width:(84/80)*1em;
+.icon-icon-next {
+	font-size:(37/10)*1rem;
+	//width:(54/37)*1em;
 }
-.icon-icon-adv2 {
-	font-size:(80/10)*1rem;
-	//width:(87/80)*1em;
-}
-.icon-icon-adv3 {
-	font-size:(83/10)*1rem;
-	//width:(90/83)*1em;
-}
-.icon-icon-adv4 {
-	font-size:(80/10)*1rem;
-	//width:(87/80)*1em;
-}
-.icon-icon-adv5 {
-	font-size:(80/10)*1rem;
-	//width:(87/80)*1em;
-}
-.icon-icon-adv6 {
-	font-size:(80/10)*1rem;
-	//width:(84/80)*1em;
-}
-.icon-icon-play {
-	font-size:(68/10)*1rem;
-	//width:(97/68)*1em;
+.icon-icon-prev {
+	font-size:(37/10)*1rem;
+	//width:(54/37)*1em;
 }
 .icon-icon-scroll {
 	font-size:(44/10)*1rem;
@@ -84,26 +64,6 @@
 .icon-pagin-prev {
 	font-size:(17/10)*1rem;
 	//width:(11/17)*1em;
-}
-.icon-plus {
-	font-size:(459.325/10)*1rem;
-	//width:(459.325/459.325)*1em;
-}
-.icon-ruble {
-	font-size:(42/10)*1rem;
-	//width:(30/42)*1em;
-}
-.icon-slick-left {
-	font-size:(37/10)*1rem;
-	//width:(54/37)*1em;
-}
-.icon-slick-right {
-	font-size:(37/10)*1rem;
-	//width:(54/37)*1em;
-}
-.icon-tel {
-	font-size:(480.56/10)*1rem;
-	//width:(480.56/480.56)*1em;
 }
 .icon-view {
 	font-size:(44/10)*1rem;
