--- a/src/_/concat.block.less
+++ b/src/_/concat.block.less
@@ -2405,6 +2405,114 @@ body.rtl .formError .formErrorArrow {
 			//color: @white;
 		}
 	}
+	&hamburger-card{
+		position: relative;
+		z-index: 10;
+		padding: 0;
+		cursor: pointer;
+		font: inherit;
+		color: inherit;
+		text-transform: none;
+		background-color: transparent!important;
+		outline: none!important;
+		border: 0;
+		overflow: visible; 
+		display: block
+	}
+	&hamburger-card-inner{		
+		width: @navbar-humb-width;
+		height: @navbar-humb-width;
+		padding: 10px 5px;
+		display: flex;
+  		//flex-direction: column;
+  		flex-flow: row wrap;
+ 		//justify-content: space-between;
+ 		align-content: space-between;
+	}
+	&hamburger-card-line{
+    	display: block;
+		width: 100%;
+		height: 3px;
+		transition: @trs-site;
+		background-color: @navbar-humb-bg;
+		border-radius: 3px;
+    	position: relative;
+		transition: @trs-site;
+		.navbar__hamburger-card.is--active &{
+			background-color: @navbar-humb-bg-active;
+		}				
+		&.is--left{
+			.navbar__hamburger-card.is--active &{				
+				transform: translate(0px, 10px) rotate(-135deg);
+				transition: @trs-site 0.2s;
+			}
+		}	
+		&.is--center{
+			transform-origin: 100% 0;
+			transition: @trs-site 0.2s;
+			.navbar__hamburger-card.is--active &{
+				transform: scale(0, 1);
+				transition: @trs-site;
+			}
+		}	
+		&.is--right{
+			.navbar__hamburger-card.is--active &{			
+				transform: translate(-1px, -9px) rotate(135deg);
+				transition: @trs-site 0.2s;
+			}
+		}
+		//var
+		/*&.is--top-left,
+		&.is--top-right,
+		&.is--bottom-left,
+		&.is--bottom-right{
+			width: 50%;
+		}
+		&.is--top-right,
+		&.is--bottom-right{
+			border-radius: 0 3px 3px 0;
+			.hamburger__card.is--active &{
+				border-radius: 3px 0 0 3px;
+			}
+		}
+		&.is--top-left,
+		&.is--bottom-left{
+			border-radius: 3px 0 0 3px;
+			.hamburger__card.is--active &{
+				border-radius: 0 3px 3px 0;
+			}
+		}
+		&.is--top-right{
+			transform-origin: center right;
+		}
+		&.is--bottom-left{
+			transform-origin: center left;
+		}
+		&.is--top-right,
+		&.is--bottom-left{
+			transition-delay: 0.25s;
+			.hamburger__card.is--active &{				
+				//opacity: 0;
+				transition-delay: 0s;
+				transform: scale(0, 1);
+			}
+		}
+		&.is--center{
+			.hamburger__card.is--active &{				
+				transform: rotate(-45deg);
+			}
+		}
+		&.is--top-left{
+			.hamburger__card.is--active &{				
+				transform: translate(2px, 4px) rotate(-135deg); 
+			}
+		}
+		&.is--bottom-right{
+			.hamburger__card.is--active &{				
+				transform: translate(-2px, -4px) rotate(-135deg); 
+			}
+		}*/
+	}
 }
 /*.navbar-aside__{ 
 	@gutter: 0px;
