--- a/src/css/site/var.less
+++ b/src/css/site/var.less
@@ -309,6 +309,22 @@
 @table_head_padding:		12px;
 @table_head_border_color:	@black-af;
 //===== end's table =====//
+//===== modal =====//
+@modal_backdrop:				@black;
+@modal_backdrop_fade:			0.9;
+@modal_bg:						@white;
+@modal_width:					500px;
+@modal_width_device:			650px;
+@modal_btn_width:				34px;
+@modal_btn_border_rad:			50%;
+@modal_btn_color:				@b-color-a-hover;
+@modal_btn_bg:					@modal_bg;
+@modal_btn_border:				2px;
+@modal_btn_border_color:		@b-color-a;
+@modal_btn_color_hover:			@b-color-a;
+@modal_btn_bg_hover:			@b-color-a-hover;
+@modal_btn_border_color_hover:	@b-color-a-hover;
+//===== end's modal =====//
 
 
 
