--- a/src/block/site/default/modals/.less
+++ b/src/block/site/default/modals/.less
@@ -1,135 +1,105 @@
- //
-// Modals
-// --------------------------------------------------
-
-// .modal-open      - body class for killing the scroll
-// .modal           - container to scroll within
-// .modal-dialog    - positioning shell for the actual modal
-// .modal-content   - actual modal w/ bg and corners and shit
-
-// Kill the scroll on the body
 .modal-open {
 	overflow: hidden; 
 }
-.modal {
-	display: none;
-	overflow: hidden;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: @zindex-modal;
-	-webkit-overflow-scrolling: touch;
-	outline: 0;
-	@media @media-point-smart {
-		&.fade .modal-dialog {left: -100%;}
-		&.in .modal-dialog {left: 0;}
+.modal__ {
+	&block{
+		display: none;
+		overflow: hidden;
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: 1000;
+		-webkit-overflow-scrolling: touch;
+		outline: 0;		
+		.modal-open &{
+			overflow-x: hidden;
+			overflow-y: auto;
+			@media @media-point-notsmart{overflow-y: hidden;}
+		}		
+		//display: block;
+		//opacity: 1;
+		//background: @black;
 	}
-	@media @media-point-notsmart{
-		&.fade .modal-dialog {top: 0;}
-		&.in .modal-dialog {top: 5%;}
+	&dialog {
+		transition: all 0.5s;
+		position: relative;
+		width: auto;	
+		margin: 0px;
+		@media @media-point-notsmart {
+			box-shadow: 6px 8px 16px fadeout(@black, 80%);
+		}
+		@media @media-point-tablet 	{
+			width: @modal_width_device;	
+			margin: 10px auto;
+		}  
+		@media @media-point-screen 	{
+			width: @modal_width;	
+			margin: 0px auto;
+		} 
+		.modal__block.fade &{
+			left: -100%;
+		}
+		.modal__block.in &{
+			left: 0;
+		}
+		@media @media-point-notsmart{			
+			.modal__block.fade &{
+				top: 0;
+				left: inherit;
+			}
+			.modal__block.in &{
+				top: 5%;
+				left: inherit;
+			}
+		}
 	}
-	@media @media-point-md2{
-		&.fade .modal-dialog {top: 0;}
-		&.in .modal-dialog {top: 0%;}
+	&body {
+		position: relative;
+		background: @white;
+		border-radius: 5px;
+		padding: 35px 40px;
+		@media @media-point-tablet{padding: 70px 60px 50px;}
+		@media @media-point-screen{padding: 3.8vw 5vw;}
 	}
-}
-.modal-open .modal {
-	overflow-x: hidden;
-	overflow-y: auto;
-	@media @media-point-notsmart{overflow-y: hidden;}
-	
+	&content{}
+	&btn-close{
+		.btn-clearfix();
+	    position: absolute;
+	    z-index: 5; 
+		top: 15px;
+		right: 15px;
+	    border-width: @modal_btn_border; 
+	    border-style: solid; 
+	    border-color: @modal_btn_border_color; 
+	   	color: @modal_btn_color;
+	   	background-color: @modal_btn_bg; 
+	   	border-radius: @modal_btn_border_rad;
+		width: @modal_btn_width;
+		height: @modal_btn_width;
+		padding: 8px;
+		svg{display: block;}
+	   	transition: @trs-site;  	 
+		&:hover{
+			background-color: @modal_btn_bg_hover;
+			border-color: @modal_btn_border_color_hover;
+			color: @modal_btn_color_hover;
+		}
+	}
 }
 .modal-backdrop {
 	position: fixed;
 	top: 0;
 	right: 0;
-	bottom: 0;
+	bottom: -1px;
 	left: 0;
-	z-index: @zindex-modal-background;
-	background-color: @modal-backdrop-bg;
-	// Fade for backdrop
-	&.fade { .opacity(0); }
-	&.in { .opacity(0.90); }
-
-}
-.modal-dialog {
-	transition: all 0.5s;
-	position: relative;
-	width: auto;	
-	margin: 0px;
-	@media @media-point-notsmart {
-		box-shadow: 6px 8px 16px fadeout(@black, 80%);
+	z-index: 940;
+	background-color: @modal_backdrop;
+	&.fade { 
+		opacity: 0;
 	}
-	@media @media-point-tablet 	{width: 620px;	margin: 10px auto;}  
-	@media @media-point-screen 	{width: 495px;	margin: 0px auto;} 
-	 
-}
-.modal-body {
-	position: relative;
-	background: @white;
-	border-radius: 5px;
-	padding: 35px 40px;
-	@media @media-point-tablet{padding: 70px 60px 50px;}
-	@media @media-point-screen{padding: 3.8vw 5vw;}
-}
-.modal-content{}
-// Title text within header
-.modal-title {}
-.modal-close{	
-    position: absolute;
-    z-index: 5; 
-    border: 2px solid @b-color-a; 
-   	color: @b-color-a-hover;
-   	background-color: @white; 
-   	border-radius: 50%;
-   	transition: @trs-site;  	 
-	width: 30px;
-	height: 30px;
-	padding: 7px;
-	top: 15px;
-	right: 15px;
-	svg{display: block;} 	
-		
-	&:hover{
-		background-color: @b-color-a;
-		border-color: @b-color-a;
-		color: @white;
-	}
-}
-.modal-note{
-	margin-bottom: 20px;
-}
-// Measure scrollbar width for padding body during modal show/hide
-.modal-scrollbar-measure {
-  position: absolute;
-  top: -9999px;
-  width: 50px;
-  height: 50px;
-  overflow: scroll;
-}
-
-//custom styles
-.modal-base__{
-	&modal{
-		//display: block;
-		//opacity: 1;
-		//background: @black
-	}
-	&dialog {
-		//background: url('/img/maket/products-modal.jpg') no-repeat -738px -148px;
-		//height: 100%;
-		//overflow: auto;
-		/*&.is--lg{
-			@media @media-point-notsmart {
-				width: 445px;
-			}
-		}*/
-	}
-	&body {
-		//opacity: 0.7;
-		//background-color: @blue-light;
-		//overflow: hidden;
+	&.in {
+		opacity: @modal_backdrop_fade;
 	}
 }
