--- a/src/_/concat.block.less
+++ b/src/_/concat.block.less
@@ -598,6 +598,91 @@
 		&.is--next{}
 	}
 }
+.btn-nav__{
+	&item{
+		.btn-clearfix();
+		width: 36px;
+		height: 36px;
+		padding: 7px;
+		border-radius: 50%;
+		position: relative;
+		display: block;
+		background-color: @b-color-a-hover;
+		color: @b-color-a;
+		&:hover{
+			background-color: @b-color-a;
+			color: @b-color-a-hover;
+		}
+		&.is--prev{
+
+		}
+		&.is--next{
+		}
+		&.is--slick{
+			position: absolute;
+			z-index: 5;
+			bottom: 5px;
+			&.is--prev{
+				left: 5px;
+			}
+			&.is--next{
+				right: 5px;
+			}
+			@media @media-point-notsmart {
+				bottom: inherit;
+				top: 45%;
+				transform: translateY(-50%);
+				&.is--prev{
+					left: 3.5vw;
+				}
+				&.is--next{
+					right: 3.5vw;
+				}				
+			}
+			[data-slider-slick="slick-gallery"] &{				
+				&.is--prev{
+					left: 0;
+					@media @media-point-smart {
+						top: 0px;
+						left: 50%;
+						transform: translateX(-200%);
+					}
+					@media @media-point-screen {
+						transform: translate(-145%, -50%);
+					}
+					@media @media-point-xxl {
+						transform: translate(-310%, -50%);
+					}
+				}
+				&.is--next{
+					right: 0;
+					@media @media-point-smart {
+						top: 0px;
+						right: 50%;
+						transform: translateX(200%);
+					}
+					@media @media-point-screen {
+						transform: translate(145%, -50%);
+					}
+					@media @media-point-xxl {
+						transform: translate(310%, -50%);
+					}
+				}
+			}
+		}
+
+		.slick-slider.slick-dotted &{
+			@media @media-point-screen {
+				top: ~"calc(55% - 2.5vw - 25px)";
+			}
+		}
+	}
+	&icon{
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+}
 .card-item__{
 	&card{
 		position: relative;
