--- a/src/css/site/var.less
+++ b/src/css/site/var.less
@@ -166,10 +166,12 @@
 @header_screen:					174px;
 //===== pagination =====//
 @pagin-gutter: 					2px;
-@pagin-color: 					@b-color-h;
-@pagin-color-hover: 			@white;
-@pagin-color-h: 				@b-color-a;
-@pagin-bg: 						@yellow;
+@pagin-color: 					@black;
+@pagin-color-hover: 			@black;
+@pagin-color-active: 			@b-color;
+@pagin-bg: 						@b-color;
+@pagin-bg-hover: 				@b-color-a-hover;
+@pagin-bg-active: 				@b-color-a;
 //===== breadcrumb =====//
 @bread_fs: 						@b-fs;
 @bread_lh: 						@b-lh;
